fix homepage and navbar on mobile

--- a/johnny-monolith/src/app/homepage.module.css
+++ b/johnny-monolith/src/app/homepage.module.css
@@ -42,3 +42,8 @@
         transform: scaleX(1);
 	}
 }
+
+.container{
+  padding-right: 10px;
+  padding-left: 10px;
+}
