--- a/johnny-monolith/src/components/Footer/Footer.module.css
+++ b/johnny-monolith/src/components/Footer/Footer.module.css
@@ -23,13 +23,17 @@
   padding-top: var(--mantine-spacing-xl);
   padding-bottom: var(--mantine-spacing-xl);
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 600px) {
+
     flex-direction: column;
   }
 }
 
 .links {
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 600px) {
     margin-top: var(--mantine-spacing-md);
+    justify-self: center;
+    justify-content: center;
+    margin-right: auto;
   }
 }
